--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "casper",
-    "description": "A clean, minimal default theme for the Ghost publishing platform",
+    "name": "casper_plus",
+    "description": "A clean, minimal default theme for the Ghost publishing platform + Search powered by ghostHunter",
     "demo": "https://demo.ghost.io",
     "version": "4.1.0",
     "engines": {
