--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "casper_plus",
+    "name": "casper-plus",
     "description": "A clean, minimal default theme for the Ghost publishing platform + Search powered by ghostHunter",
     "demo": "https://demo.ghost.io",
     "version": "4.1.0",
